--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
         
               <p>Cantidad:
                 <span class="cantidad">0</span>
-                <button class="btn-add" onclick="adicionarElemento()" 
+                <button class="btn-add" id="add" onclick="adicionarElemento()" 
                 >+</button>
-                <button class="btn-remove" onclick="restarElemento()" 
-                >-</button>
-                <button class="btn-calc" onclick="calcularPrecio()">
-                    =
-                </button>
+                <button class="btn-remove" id="rem" onclick="restarElemento()" 
+                >-</button>                
               </p>
             </div>
 
